# clp-ffi-go

./: README.rst
cpp/: CMakeLists.txt
cpp/src/ffi_go/: LogTypes.hpp  defs.h
cpp/src/ffi_go/ir/: LogTypes.hpp  decoder.cpp  decoder.h  deserializer.cpp  deserializer.h  encoder.cpp  encoder.h  serializer.cpp  serializer.h
cpp/src/ffi_go/search/: wildcard.cpp  wildcard.h  wildcard_match.cpp  wildcard_match.h
ffi/: ffi.go
ir/: BUILD.bazel  decoder.go  deserializer.go  encoder.go  ir.go  ir_test.go  irerror.go  irerror_string.go  query.go  reader.go  reader_test.go  serder_test.go  serializer.go
search/: BUILD.bazel  wildcard.go
